--- a/app/Resources/views/job/show.html.twig
+++ b/app/Resources/views/job/show.html.twig
@@ -4,6 +4,10 @@
     <link rel="stylesheet" href="{{ asset('bundles/alyyajobeet/css/job.css') }}" type="text/css" media="all" />
 {% endblock %}
 {% block body %}
+
+    {% if app.request.get('token') %}
+        {{ include('job/admin.html.twig', {'token' : app.request.get('token')}) }}
+    {% endif %}
    <div id="job">
        <h1>{{ job.company }}</h1>
        <h2>{{ job.company }}</h2>
@@ -14,7 +18,7 @@
        {% if job.logo %}
            <div class="log">
                <a href="{{ job.url }}">
-                   <img src="{uploads/jobs/{{ job.logo }}" alt="{{ job.company }} logo "/>
+                   <img src="{{ asset('uploads/jobs/'~job.logo) }}" alt="{{ job.company }} logo "/>
                </a>
            </div>
        {% endif %}
@@ -25,11 +29,7 @@
        <div class="meta">
            <small>posted on{{ job.createdat|date('m/d/Y') }}</small>
        </div>
-       <div style="padding: 20px 0">
-           <a href="{{ path('alyya_job_edit',{'id':job.id}) }}">
-               Edit
-           </a>
-       </div>
+
 
    </div>
 {% endblock %}
